--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,7 @@
 input {
     @apply appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight;
 }
+
+.spinner{
+    position: absolute;
+}
