:hammer: Dashboard | Vista preliminar de lo que sería el dashboard haciendo uso de componentes de laravel
Diseño con tailwind, componentes

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,8 +2,17 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+/* 
+@import '~@fortawesome/fontawesome-free/css/all.css'; */
+
+
+
 input {
     @apply appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight;
+}
+
+.btn-buy-services {
+    @apply transition  bg-green-500   rounded  justify-center w-full py-2 text-center text-white font-semibold duration-300  
 }
 
 .spinner{
