Pagos | interfaz con flow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,11 +12,15 @@ input {
 }
 
 .btn-buy-services {
-    @apply transition  bg-green-500   rounded  justify-center w-full py-2 text-center text-white font-semibold duration-300  
+    @apply transition  bg-green-500 justify-center w-full py-2 text-center text-white font-semibold duration-300  
+}
+
+.btn-buy-services-flow {
+    @apply transition  bg-blue-500 justify-center w-full py-2 text-center text-white font-semibold duration-300  
 }
 
 .btn-renovar-services {
-    @apply transition  bg-blue-500   rounded  justify-center w-full py-2 text-center text-white font-semibold duration-300  
+    @apply transition  bg-blue-500 justify-center w-full py-2 text-center text-white font-semibold duration-300  
 }
 
 .btn-transition {
